--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     server.port:<span th:text="${env.getProperty('server.port')}"></span><br/>
+    user:<span th:text="${session.user}"></span>
 </body>
 </html>
